--- a/src/css/snackbar-styles.css
+++ b/src/css/snackbar-styles.css
@@ -1,4 +1,4 @@
-.feedback-form {
+/* .feedback-form {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -51,4 +51,4 @@ button {
 
 button:hover {
   background-color: #6c8cff;
-}
+} */
