--- a/src/css/snackbar-styles.css
+++ b/src/css/snackbar-styles.css
@@ -1,7 +1,6 @@
-/* .feedback-form {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+@import url('basic.css');
+
+.form {
   width: 360px;
 }
 
@@ -9,26 +8,55 @@ label {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 
-input,
-textarea {
-  display: block;
+fieldset label {
+  flex-direction: row;
+  align-items: center;
+  height: 32px;
+}
+
+fieldset {
+  display: flex;
+  gap: 48px;
+  padding: 0;
+  height: 64px;
+  justify-content: center;
+  border-radius: 4px;
+  margin: 16px 0 24px 0;
+  border: 1px solid #808080;
+}
+
+legend {
+  margin-left: 28px;
+}
+
+input {
+  display: inline-block;
   height: 40px;
   border: 1px solid #808080;
   border-radius: 4px;
   outline: none;
   font-size: 16px;
-  letter-spacing: 0.04em;
+  line-height: 1.5;
 }
 
-textarea {
+input[name='delay'] {
+  padding-left: 20px;
+}
+
+input[name='state'] {
   resize: none;
-  height: 80px;
+  height: 20px;
+  width: 20px;
+  margin: 0;
 }
 
 input:hover,
-textarea:hover {
+fieldset:hover {
   border-color: black;
 }
 
@@ -38,7 +66,7 @@ button {
   cursor: pointer;
   border-radius: 8px;
   padding: 8px 16px;
-  width: 95px;
+  width: 100%;
   height: 40px;
   background-color: #4e75ff;
   font-weight: 500;
@@ -46,9 +74,8 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  margin-top: 16px;
 }
 
 button:hover {
   background-color: #6c8cff;
-} */
+}
